--- a/examples/treegrid/treegrid-row-nav-primary-1.html
+++ b/examples/treegrid/treegrid-row-nav-primary-1.html
@@ -122,43 +122,43 @@ document.addEventListener('DOMContentLoaded', function () {
         </thead>
         <tbody>
           <tr role="row" aria-level="1" aria-posinset="1" aria-setsize="1" aria-expanded="true">
-            <td role="gridcell">Treegrids are broken</td>
-            <td role="gridcell">How do we fix them?</td>
+            <td role="gridcell">Treegrids are awesome</td>
+            <td role="gridcell">Want to learn how to use them?</td>
             <td role="gridcell"><a href="mailto:aaron@thegoogle.rocks">aaron@thegoogle.rocks</a></td>
           </tr>
           <tr role="row" aria-level="2" aria-posinset="1" aria-setsize="3">
-             <td role="gridcell">re: Treegrids are broken</td>
-             <td role="gridcell">I agree with you, but ...</td>
+             <td role="gridcell">re: Treegrids are awesome</td>
+             <td role="gridcell">I agree with you, they are the shizzle</td>
              <td role="gridcell"><a href="mailto:joe@blahblahblah.blahblah">joe@blahblahblah.blahblah</a></td>
           </tr>
           <tr role="row" aria-level="2" aria-posinset="2" aria-setsize="3" aria-expanded="true">
-             <td role="gridcell">re: Treegrids are broken
-             <td role="gridcell">Not that many people use them
+             <td role="gridcell">re: Treegrids are awesome
+             <td role="gridcell">They are great for showing a lot of data, like a grid
              <td role="gridcell"><a href="mailto:billy@dangerous.fish">billy@dangerous.fish</a></td>
           </tr>
           <tr role="row" aria-level="3" aria-posinset="1" aria-setsize="1">
-             <td role="gridcell">re: Treegrids are broken</td>
-             <td role="gridcell">We still need them, plus it's a spec hole</td>
+             <td role="gridcell">re: Treegrids are awesome</td>
+             <td role="gridcell">Cool, we've been needing an example and documentation</td>
              <td role="gridcell"><a href="mailto:doris@rufflazydogs.sleep">doris@rufflazydogs.sleep</a></td>
           </tr>
           <tr role="row" aria-level="2" aria-posinset="3" aria-setsize="3" aria-expanded="true">
-             <td role="gridcell">re: Treegrids are broken</td>
-             <td role="gridcell">Can someone suggest something?</td>
+             <td role="gridcell">re: Treegrids are awesome</td>
+             <td role="gridcell">I hear the Fancytree library is going to align with this example!</td>
              <td role="gridcell"><a href="mailto:someone@please-do-it.company">someone@please-do-it.company</a></td>
           </tr>
           <tr role="row" aria-level="3" aria-posinset="1" aria-setsize="1" aria-expanded="false">
-             <td role="gridcell">re: Treegrids are broken</td>
-             <td role="gridcell">They are more like trees than grids, not that many columns usually</td>
+             <td role="gridcell">re: Treegrids are awesome</td>
+             <td role="gridcell">Sometimes they are more like trees, otherse are more like grids</td>
              <td role="gridcell"><a href="mailto:mari@beingpractical.com">mari@beingpractical.com</a></td>
           </tr>
           <tr role="row" aria-level="4" aria-posinset="1" aria-setsize="2" aria-hidden="true">
-             <td role="gridcell">re: Treegrids are broken</td>
-             <td role="gridcell">Cool, let's keep left/right collapse/expand like a tree</td>
+             <td role="gridcell">re: Treegrids are awesome</td>
+             <td role="gridcell">Cool, when it's a tree, let's keep left/right to collapse/expand</td>
              <td role="gridcell"><a href="mailto:issie@imadeadcatsadly.wascute">issie@imadeadcatsadly.wascute</a></td>
           </tr>
           <tr role="row" aria-level="4" aria-posinset="2" aria-setsize="2" aria-hidden="true">
-             <td role="gridcell">re: Treegrids are broken
-             <td role="gridcell">There be a column navigation command</td>
+             <td role="gridcell">re: Treegrids are awesome
+             <td role="gridcell">I see, sometimes right arrow moves by column</td>
              <td role="gridcell"><a href="mailto:kitten@kittenseason.future">kitten@kittenseason.future</a></td>
           </tr>
         </tbody>
