--- a/examples/menu-button/menu-button-actions-active-descendant.html
+++ b/examples/menu-button/menu-button-actions-active-descendant.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Menu Button Example: Actions (aria-acivedescendant) | WAI-ARIA Authoring Practices 1.1</title>
+    <title>Actions Menu Button Example Using aria-activedescendant | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -10,6 +10,7 @@
     <script src="../js/highlight.pack.js"></script>
     <script src="../js/app.js"></script>
 
+    <!-- JS and CSS for this example -->
     <link href="css/menuButtonAction.css" rel="stylesheet">
     <script src="js/Menubutton.js" type="text/javascript"></script>
     <script src="js/MenuItemActionActivedescendant.js" type="text/javascript"></script>
@@ -17,21 +18,27 @@
   </head>
   <body>
     <main>
-      <h1>Actions Menu Button Example (aria-activedescendant)</h1>
-      <p>This example implements the <a href="../../../#menubutton">menu button design pattern</a>
-      for a button that provides access to a menu of actions using <code>aria-activedescendant</code> to identify which button to focus on.
+      <h1>Actions Menu Button Example Using aria-activedescendant</h1>
+      <p>
+        This example demonstrates how the   
+        <a href="../../../#menubutton">menu button design pattern</a>
+      can be used to create a button that opens an actions menu.
+      In this example, choosing an action from the menu will cause the chosen action to be displayed in the <q>Last Action</q> edit box.
+    </p>
+    <p>
+    This implementation 
+    <a href="../../#kbd_focus_activedescendant">uses aria-activedescendant to manage focus</a>
+    in the menu.
       </p>
       <p>Similar examples include: </p>
       <ul>
-        <li><a href="menu-button-actions.html">Action Menu Button</a>: The popup menu items can be used to activate actions in a web application.</li>
-        <li><a href="menu-button-links.html">Navigation Menu Button</a>: The popup menu items are <code>a</code> elements and act as links.</li>
+        <li><a href="menu-button-actions.html">Action Menu Button Example Using Roving tabindex</a>: A button that opens a menu of actions or commands where focus in the menu is managed using a roving tabindex.</li>
+        <li><a href="menu-button-links.html">Navigation Menu Button</a>: A button that opens a menu of items that behave as links.</li>
       </ul>
       <section>
         <h2 id="ex_label">Example</h2>
-        <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>        <div id="ex1">
-
-          <p>This example shows a popup menu of actions that can be used for changing states in a web application.</p>
-
+        <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>        
+        <div id="ex1">
           <div class="menu_button">
             <button
                 id="menubutton1"
@@ -40,7 +47,6 @@
                 >
               Actions
             </button>
-
             <ul id="menu1" role="menu" aria-labelledby="menubutton1" aria-activedescendant="mi1">
               <li id="mi1" role="menuitem"  onclick="updateLastAction(event)">Action 1</li>
               <li id="mi2" role="menuitem"  onclick="updateLastAction(event)">Action 2</li>
@@ -48,7 +54,6 @@
               <li id="mi4" role="menuitem"  onclick="updateLastAction(event)">Action 4</li>
             </ul>
           </div>
-
         <p>
           <label>Last Action: <input id="action_output" type="text" value=""></label>
         </p>
@@ -70,15 +75,11 @@
 
         </div>
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
-
       </section>
-
 
       <section>
         <h2 id="kbd_label">Keyboard Support</h2>
-
         <h3 id="kbd1_label">Menu Button</h3>
-
         <table aria-labelledby="kbd1_label kbd_label" class="def">
           <thead>
             <tr>
@@ -88,18 +89,16 @@
           </thead>
           <tbody>
             <tr>
-              <th><kbd>Down Arrow, <br/>Space, <br/>or Enter</kbd></th>
+              <th><kbd>Down Arrow</kbd><br><kbd>Space</kbd><br><kbd>Enter</kbd></th>
               <td>Open <code>menu</code> and move focus to first <code>menuitem</code></td>
             </tr>
             <tr>
-              <th><kbd>Up Arrow Key</kbd></th>
-              <td>Open <code>menu</code> and move focus to previous <code>menuitem</code></td>
+              <th><kbd>Up Arrow</kbd></th>
+              <td>Open <code>menu</code> and move focus to last <code>menuitem</code></td>
             </tr>
           </tbody>
         </table>
-
-         <h3 id="kbd2_label" class="widget">Popup Menu Widget</h3>
-
+         <h3 id="kbd2_label" class="widget">Menu</h3>
         <table aria-labelledby="kbd2_label kbd_label" class="def">
           <thead>
             <tr>
@@ -109,11 +108,12 @@
           </thead>
           <tbody>
             <tr>
-              <th><kbd>Space or Enter</kbd></th>
+              <th><kbd>Space</kbd><br><kbd>Enter</kbd></th>
               <td>
                 <ul>
-                  <li>Activates any <code>click</code> event associated with the <code>menuitem</code>.  In this example updates the "Last Action" textbox.</li>
-                  <li>Moves focus back to <code>menu button</code> and then closes the <code>menu</code>.  NOTE: This sequence is important since hidding the element with focus will cause the focus to move to the beginning of the page.</li>
+                  <li>Activates the menu item, causing the <q>Last Action</q> textbox to be updated.</li>
+                                    <li>Closes the menu.</li>
+                                    <li>Sets focus on the menu button</li>
                 </ul>
               </td>
             </tr>
@@ -121,8 +121,8 @@
               <th><kbd>Escape</kbd></th>
               <td>
                 <ul>
-                  <li>Closes popup menu.</li>
-                  <li>Moves focus to button menu.</li>
+                  <li>Closes the menu.</li>
+                  <li>Sets focus to the menu button.</li>
                 </ul>
               </td>
             </tr>
@@ -130,8 +130,8 @@
               <th><kbd>Up Arrow</kbd></th>
               <td>
                 <ul>
-                  <li>Moves focus to previous popup menu item.</li>
-                  <li>If first popup menu item, focus is moved to the last popup menu item.</li>
+                  <li>Moves focus to the previous menu item.</li>
+                  <li>If focus is on the first menu item, moves focus to the last menu item.</li>
                 </ul>
               </td>
             </tr>
@@ -139,33 +139,25 @@
               <th><kbd>Down Arrow</kbd></th>
               <td>
                 <ul>
-                  <li>Moves focus to next popup menu item.</li>
-                  <li>If last popup menu item, focus is moved to the first popup menu item.</li>
+                  <li>Moves focus to the next menu item.</li>
+                  <li>If focus is on the last menu item, moves focus to the first menu item.</li>
                 </ul>
               </td>
             </tr>
             <tr>
               <th><kbd>Home</kbd></th>
-              <td>
-                <ul>
-                  <li>Moves focus to first popup menu item.</li>
-                </ul>
-              </td>
+              <td>Moves focus to the first menu item.</td>
             </tr>
             <tr>
               <th><kbd>End</kbd></th>
-              <td>
-                <ul>
-                  <li>Moves focus to last popup menu item.</li>
-                </ul>
-              </td>
+              <td>Moves focus to the last menu item.</td>
             </tr>
             <tr>
-              <th><kbd>A-Z, a-z</kbd></th>
+              <th><kbd>A-Z</kbd><br><kbd>a-z</kbd></th>
               <td>
                 <ul>
-                  <li>Moves focus to the next popup item that starts with that letter.</li>
-                  <li>If no popup menu item starts with the letter, focus does not move.</li>
+                  <li>Moves focus to the next menu item with a lable that starts with the typed character if such an menu item exists.</li>
+                  <li>Otherwise, focus does not move.</li>
                 </ul>
               </td>
             </tr>
@@ -173,12 +165,9 @@
         </table>
       </section>
 
-
       <section>
         <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-
-        <h3 id="rps1_label">Menu Button Widget</h3>
-
+        <h3 id="rps1_label">Menu Button</h3>
         <table aria-labelledby="rps1_label rps_label" class="data attributes">
           <thead>
             <tr>
@@ -190,48 +179,28 @@
           </thead>
           <tbody>
             <tr>
-              <th scope="row">
-                <code>button</code>
-              </th>
               <td></td>
-              <td>
-                <code>button</code>
-              </td>
-              <td>
-                <ul>
-                  <li>Default <code>role</code> of a <code>button</code> element is "<code>button</code>", so <em>no</em> need to set the <code>role</code> attribute.</li>
-                  <li>The accessible name comes from the child text content of the <code>button</code> element (e.g. &quot;Actions&quot;).</li>
-                  <li>The <code>button</code> element is a part of the default tab order of the page (e.g. <code>tabindex=0</code>), so <em>no</em> need to set <code>tabindex</code>.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <code></code>
-              </td>
               <th scope="row"><code>aria-haspopup=&quot;true&quot;</code></th>
               <td>
                 <code>button</code>
               </td>
               <td>
                 <ul>
-                  <li>The <code>aria-haspopup</code> attribute defines an element with <code>role=button</code> as a ARIA menu button design pattern and indicates the actions of the button are to open and close the popup menu.</li>
+                  <li>Indicates the <code>button</code> element opens a menu.</li>
+                  <li>
+                    <strong>NOTE:</strong> While ARIA does not include a role specifically for menu buttons, most platform accessibility APIs include a menubutton role.
+                    Consequently, on such platforms, assistive technologies, such as screen readers, identify buttons that have <code>aria-haspopup</code> set to either <code>true</code> or <code>menu</code> as menu buttons.
+                  </li>
                 </ul>
               </td>
             </tr>
             <tr>
-              <td>
-                <code></code>
-              </td>
+              <td></td>
               <th scope="row"><code>aria-controls=&quot;IDREF&quot;</code></th>
               <td>
                 <code>button</code>
               </td>
-              <td>
-                <ul>
-                  <li>The <code>aria-controls</code> attribute serves as a pointer to the the popup menu that is controlled by the menu button.</li>
-                </ul>
-              </td>
+              <td>Refers to the menu container controlled by the menu button.</td>
             </tr>
             <tr>
                 <td></td>
@@ -239,25 +208,16 @@
                 <td><code>button</code></td>
                 <td>
                   <ul>
-                    <li>The <code>aria-expanded</code> attribute with the value <code>true</code> is add when the menu is open.</li>
-                  </ul>
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <th scope="row"><code>aria-expanded</code></th>
-                <td><code>button</code></td>
-                <td>
-                  <ul>
+                    <li>Added when the menu is open.</li>
+                    <li>Indicates that the menu is displayed and that activating the menu button closes the menu.</li>
                     <li>The <code>aria-expanded</code> attribute is removed when the menu is closed.</li>
+                    <li>Included to support touch devices where screen reader users can touch the menu button when the menu is displayed. Keyboard users cannot focus the menu button when the menu is open.</li>  
                   </ul>
                 </td>
             </tr>
           </tbody>
         </table>
-
-        <h3 id="rps2_label">Popup Menu</h3>
-
+        <h3 id="rps2_label">Menu</h3>
         <table aria-labelledby="rps2_label rps_label" class="data attributes">
           <thead>
             <tr>
@@ -276,39 +236,48 @@
               <td>
                 <code>ul</code>
               </td>
-              <td>
-                <ul>
-                  <li>The <code>role=&quot;menu&quot;</code> attribute identifies the <code>ul</code> element as an ARIA <code>menu</code> widget.</li>
-                  <li>Accessible name for the <code>menu</code> widget comes from <code>aria-labelledby</code> attribute.</li>
-                  <li>The <code>menu</code> widget does not need a <code>tabindex</code> value, since the <code>ul[role&quot;menu&quot;]</code> element never receives keyboard focus.</li>
-                </ul>
-              </td>
+              <td>Identifies the <code>ul</code> element as a <code>menu</code>.</td>
             </tr>
             <tr>
               <td>
                 <code></code>
               </td>
-              <th scope="row"><code>aria-labelledby=&quot;[IDREF]&quot;</code></th>
+              <th scope="row"><code>aria-labelledby=&quot;IDREF&quot;</code></th>
               <td>
                 <code>ul</code>
               </td>
               <td>
                 <ul>
-                  <li>Pointer to element with the corresponding <code>id=&quot;[IDREF]&quot;</code> that defines the accessible name for the <code>menu</code>, in this example &quot;Actions&quot;.</li>
+                  <li>Refers to the element that contains the accessible name for the <code>menu</code>.</li>
+                  <li>The menu is labeled by the menu button.</li>
                 </ul>
               </td>
             </tr>
             <tr>
-              <td>
-                <code></code>
-              </td>
-              <th scope="row"><code>aria-activedescendant=&quot;this.domnode.id&quot;</code></th>
+              <td></td>
+              <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
               <td>
                 <code>ul</code>
               </td>
               <td>
                 <ul>
-                  <li>Allows for focus to be changed by setting the setting the <code>aria-activedescendant</code> equal to the id of the menubutton.</li>
+                  <li>Allows DOM focus to be set on the menu container with the JavaScript focus method.</li>
+                  <li>Dynamically added by the JavaScript.</li>
+                  <li>Note that users never perceive the menu container as focused. When the menu is open, only menu items are perceived as focused.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <th scope="row"><code>aria-activedescendant=&quot;IDREF&quot;</code></th>
+              <td>
+                <code>ul</code>
+              </td>
+              <td>
+                <ul>
+                  <li>Refers to the descendant <code>menuitem</code> element that is visually indicated as focused.</li>
+                  <li>The <code>IDREF</code> value is updated when keys that move the focus indicator among menu items are pressed.</li>
+                  <li>Enables assistive technologies to know which element the application regards as focused while DOM focus remains on the <code>ul</code> element with role <code>menu</code>.</li>
                 </ul>
               </td>
             </tr>
@@ -322,23 +291,8 @@
               </td>
               <td>
                 <ul>
-                  <li>The <code>role=&quot;menuitem&quot;</code> attribute identifies the <code>li</code> element as an ARIA <code>menuitem</code> widget.</li>
-                  <li>Accessible name for the <code>menuitem</code> widget comes from child text content of the <code>li</code> element.</li>
-                  <li>The <code>menuitem</code> widget has <code>tabindex=&quot;-1&quot;</code>.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <code></code>
-              </td>
-              <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
-              <td>
-                <code>li</code>
-              </td>
-              <td>
-                <ul>
-                  <li>Identifies each <code>li[role=menuitem]</code> as an interactive element on the page (e.g. can recived keyboard focus), but is not part of the tab order of the page.</li>
+                  <li>Identifies the <code>li</code> element as a <code>menuitem</code>.</li>
+                  <li>The text content of the <code>li</code> element provides the accessible name of the <code>menuitem</code>.</li>
                 </ul>
               </td>
             </tr>
