--- a/examples/menu-button/menu-button-actions-active-descendant.html
+++ b/examples/menu-button/menu-button-actions-active-descendant.html
@@ -21,7 +21,7 @@
       <h1>Actions Menu Button Example Using aria-activedescendant</h1>
       <p>
         This example demonstrates how the   
-        <a href="../../../#menubutton">menu button design pattern</a>
+        <a href="../../#menubutton">menu button design pattern</a>
       can be used to create a button that opens an actions menu.
       In this example, choosing an action from the menu will cause the chosen action to be displayed in the <q>Last Action</q> edit box.
     </p>
@@ -32,7 +32,7 @@
       </p>
       <p>Similar examples include: </p>
       <ul>
-        <li><a href="menu-button-actions.html">Action Menu Button Example Using Roving tabindex</a>: A button that opens a menu of actions or commands where focus in the menu is managed using a roving tabindex.</li>
+        <li><a href="menu-button-actions.html">Action Menu Button Example Using element.focus()</a>: A button that opens a menu of actions or commands where focus in the menu is managed using <code>element.focus()</code>.</li>
         <li><a href="menu-button-links.html">Navigation Menu Button</a>: A button that opens a menu of items that behave as links.</li>
       </ul>
       <section>
@@ -200,7 +200,12 @@
               <td>
                 <code>button</code>
               </td>
-              <td>Refers to the menu container controlled by the menu button.</td>
+              <td>
+                <ul>
+                  <li>Refers to the menu element controlled by the menu button.</li>
+                  <li>Optional attribute: assistive technology users can operate the menu if not present.</li>
+                </ul>
+              </td>
             </tr>
             <tr>
                 <td></td>
@@ -278,6 +283,10 @@
                   <li>Refers to the descendant <code>menuitem</code> element that is visually indicated as focused.</li>
                   <li>The <code>IDREF</code> value is updated when keys that move the focus indicator among menu items are pressed.</li>
                   <li>Enables assistive technologies to know which element the application regards as focused while DOM focus remains on the <code>ul</code> element with role <code>menu</code>.</li>
+                  <li>
+                    For more information about this focus management technique, see 
+                    <a href="../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
+                  </li>
                 </ul>
               </td>
             </tr>
@@ -328,7 +337,7 @@
       </section>
     </main>
     <nav>
-      <a href="../../../#menubutton">Menu Button Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+      <a href="../../#menubutton">Menu Button Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
     </nav>
   </body>
   </html>
