--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1512,19 +1512,9 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
       <section class="notoc">
         <h4>Examples</h4>
         <ul>
-          <li>
-            <a href="examples/menu-button/menu-button-actions.html">Actions Menu Button Example</a>:
-            Menu button that opens a popup menu of actions that uses a <code>button</code> element for the menu button.
-          </li>
-          <li>
-            <a href="examples/menu-button/menu-button-links.html">Navigation Menu Button Example</a>:
-            Menu button that opens a popup menu of links that uses a <code>a</code> element for the menu button.
-          </li>
-          <li>
-            <a href="examples/menu-button/menu-button-actions-active-descendant.html">Actions Menu Button (aria-activedescendant) Example</a>:
-            Menu button that opens a popup menu of actions that uses a <code>button</code> element for the menu button and uses the 
-            <code>aria-activedescendant</code> to indicate menuitem with focus.
-          </li>
+          <li><a href="examples/menu-button/menu-button-links.html">Navigation Menu Button</a>: A menu button made from an HTML <code>a</code> element that opens a menu of items that behave as links.</li>
+          <li><a href="examples/menu-button/menu-button-actions.html">Action Menu Button Example Using element.focus()</a>: A menu button made from an HTML <code>button</code> element that opens a menu of actions or commands where focus in the menu is managed using <code>element.focus()</code>.</li>
+          <li><a href="examples/menu-button/menu-button-actions-active-descendant.html">Action Menu Button Example Using aria-activedescendant</a>: A button that opens a menu of actions or commands where focus in the menu is managed using aria-activedescendant.</li>
         </ul>
       </section>
     </section>
