--- a/index.html
+++ b/index.html
@@ -2736,7 +2736,19 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
         <ul>
           <li>The element that opens the menu has role <a href="http://w3c.github.io/aria/aria/aria.html#button" class="role-reference">button</a>.</li>
           <li>The element with role <code>button</code> has <a href="http://w3c.github.io/aria/aria/aria.html#aria-haspopup" class="property-reference">aria-haspopup</a> set to <code>true</code>.</li>
-          <li>The roles, states, and properties needed for the menu opened by the button are described in <a href="#menu" class="sec-ref"><span class="secno">2.16</span> <span class="sec-title">Menu or Menu bar</span></a>. </li>
+          <li>
+            When the menu is displayed, the element with role <code>button</code> has
+            <a href="http://w3c.github.io/aria/aria/aria.html#aria-expanded" class="state-reference">aria-expanded</a> set to <code>true</code>. When the menu is hidden, it is recommended that <code>aria-expanded</code> is not present. If <code>aria-expanded</code> is specified when the menu is hidden, it is set to <code>false</code>.
+          </li>
+          <li>
+            The element that contains the menu items displayed by activating the button has role
+            <a href="http://w3c.github.io/aria/aria/aria.html#menu" class="role-reference">menu</a>.
+          </li>
+          <li>
+            Optionally, the element with role <code>button</code> has a value specified for
+            <a href="http://w3c.github.io/aria/aria/aria.html#aria-controls" class="property-reference">aria-controls</a> that refers to the element with role <code>menu</code>.
+          </li>
+          <li>Additional roles, states, and properties needed for the menu element are described in <a href="#menu" class="sec-ref"><span class="secno">2.16</span> <span class="sec-title">Menu or Menu bar</span></a>.</li>
         </ul>
       </section>
 
