manual build to work around respec failure

--- a/index.html
+++ b/index.html
@@ -1841,7 +1841,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
             <li>
               When a dialog closes, focus is set on an element that supports a logical work flow. If the element that had focus before the dialog was invoked still exists, that element is usually the most appropriate choice.
             </li>
-            <li>It is strongly recommended all dialogs include a visible element with role <code>button</code> that closes the dialog, such as a close icon or cancel button, and that the element is in the <kbd>Tab</kbd> sequence.</li>
+            <li>It is strongly recommended that the tab sequence of all dialogs include a visible element with role <code>button</code> that closes the dialog, such as a close icon or cancel button.</li>
           </ol>
         </div>
       </section>
