--- a/examples/landmarks/region.html
+++ b/examples/landmarks/region.html
@@ -245,7 +245,7 @@
       <div class="well well-sm">
         <footer class="row">
           <div class="col-xs-12 col-sm-9 col-md-9 col-lg-10">
-            W3C ARIA Authoring Practices Guide Working Group
+            W3C ARIA Authoring Practices Task Force
           </div>
           <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
             Copyright 2016
