Manual build to work around respec failures.

--- a/examples/landmarks/complementary.html
+++ b/examples/landmarks/complementary.html
@@ -174,16 +174,18 @@
             </ul>
           </aside>
           <aside aria-labelledby="id3">
-            <h2 id="id3">Related W3C Specs</h2>
+            <h2 id="id3">Related W3C Documents</h2>
             <ul>
-              <li><a href="http://www.w3.org/TR/WCAG/">WCAG 2.0 Specification</a></li>
-              <li><a href="http://www.w3.org/TR/html5/">HTML5 Specification</a></li>
-              <li><a href="http://www.w3.org/TR/wai-aria/">ARIA Specification</a></li>
-              <li><a href="https://www.w3.org/TR/wai-aria-practices/">ARIA Authoring Practices</a></li>
-              <li><a href="https://www.w3.org/TR/accname-aam-1.1/">ARIA Accessible Name Calc</a></li>
-              <li><a href="https://www.w3.org/TR/aria-in-html/">ARIA in HTML5</a></li>
-              <li><a href="https://www.w3.org/TR/2016/WD-core-aam-1.1-20160317/">Core Accessibility API Mappings 1.1</a></li>
+              <li><a href="https://www.w3.org/TR/wai-aria-practices-1.1/">WAI-ARIA Authoring Practices 1.1</a></li>
+              <li><a href="http://www.w3.org/TR/2014/REC-wai-aria-20140320/">WAI-ARIA 1.0 Specification</a></li>
+              <li><a href="https://www.w3.org/TR/wai-aria-1.1/">WAI-ARIA 1.1 Specification</a></li>
+              <li><a href="https://www.w3.org/TR/accname-aam-1.1/">Accessible Name and Description: Computation and API Mappings 1.1</a></li>
+              <li><a href="http://www.w3.org/TR/core-aam-1.1/">Core Accessibility API Mappings 1.1</a></li>
               <li><a href="https://www.w3.org/TR/html-aam-1.0/">HTML Accessibility API Mappings 1.0</a></li>
+              <li><a href="http://www.w3.org/TR/html5/">HTML5 Specification</a></li>
+              <li><a href="https://www.w3.org/TR/html-aria/">ARIA in HTML</a>
+              <li><a href="https://www.w3.org/TR/aria-in-html/">Using ARIA in HTML</a></li>
+              <li><a href="http://www.w3.org/TR/WCAG/">WCAG Specification</a></li>
             </ul>
           </aside>
         </div>
@@ -191,7 +193,7 @@
       <div class="well well-sm">
         <footer class="row">
           <div class="col-xs-12 col-sm-9 col-md-9 col-lg-10">
-            W3C ARIA Authoring Practices Guide Working Group
+            W3C ARIA Authoring Practices Task Force
           </div>
           <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
             Copyright 2016
