--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<tree!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8" />
@@ -19,7 +19,7 @@
 <script src="../js/app.js"></script>
 
 <!--  js and css for this example. -->
-<link href="css/treegrid-row-nav-primary-1.css" rel="stylesheet">
+<link href="css/treegrid-1.css" rel="stylesheet">
 <style>
   /* Style the current cell focus option so user know what they're getting */
   [aria-current] {
@@ -41,7 +41,7 @@
     font-weight: bold;
   }
 </style>
-<script src="js/treegrid-row-nav-primary-1.js" type="text/javascript"></script>
+<script src="js/treegrid-1.js" type="text/javascript"></script>
 <script>
 /* Init Script for TreeGrid */
 /* Get an object where each field represents a URL parameter */
@@ -89,9 +89,9 @@ document.addEventListener('DOMContentLoaded', function () {
     This same example can be used in three ways.
   </p>
   <ul>
-    <li id="option-cell-focus-allow"><a href="./treegrid-row-nav-primary-1.html">Rows are focused first, but cells can be focused</a>:<br>Useful when we want to present the treegrid to act primarily like a tree.</li>
-    <li id="option-cell-focus-start"><a href="./treegrid-row-nav-primary-1.html?cell=start">Cells are focused first, but rows can also be focused</a>:<br>Useful when we want to present the treegrid to act primarily like a grid.</li>
-    <li id="option-cell-focus-force"><a href="./treegrid-row-nav-primary-1.html?cell=force">Only cells can be focused</a>:<br>Useful when we we are primarily a grid, and we want to simplify the user experience by removing row navigation options.</li>
+    <li id="option-cell-focus-allow"><a href="./treegrid-1.html">Rows are focused first, but cells can be focused</a>:<br>Useful when we want to present the treegrid to act primarily like a tree.</li>
+    <li id="option-cell-focus-start"><a href="./treegrid-1.html?cell=start">Cells are focused first, but rows can also be focused</a>:<br>Useful when we want to present the treegrid to act primarily like a grid.</li>
+    <li id="option-cell-focus-force"><a href="./treegrid-1.html?cell=force">Only cells can be focused</a>:<br>Useful when we we are primarily a grid, and we want to simplify the user experience by removing row navigation options.</li>
   </ul>
   <p>
     Note: no row-only version is provided. A row-only navigation version could be useful when the columns are guaranteed to fit horizontally (no horizontal scrolling necessary), the columns are merely for attractive presentation, as opposed to addressing any need to visit them individually. However, in this case the author can simply follow the tree pattern and present the child treeitem data in columns.
@@ -403,11 +403,11 @@ document.addEventListener('DOMContentLoaded', function () {
     <ul>
       <li>
         CSS:
-        <a href="css/treegrid-row-nav-primary-1.css" type="tex/css">example_name.css</a>
+        <a href="css/treegrid-1.css" type="tex/css">example_name.css</a>
       </li>
       <li>
         Javascript:
-        <a href="js/treegrid-row-nav-primary-1.js" type="text/javascript">example_name.js</a>
+        <a href="js/treegrid-1.js" type="text/javascript">example_name.js</a>
       </li>
     </ul>
   </section>
