Dialog Pattern: Clarify Description of Focus Movement
I was reminded that some focusable elements are not in the tab sequence so the description of the keyboard behavior is not clear because it says that tab moves focus to next focusable element.

So, for issue #325, made the following changes.

Added the following paragraph to the beginning of the keyboard subsection:

> In the following description, the term “tabbable element” refers to any element with a tabindex value of zero or greater.
> Note that values greater than 0 are strongly discouraged.

Added the following to the keyboard interaction description as the first item in the list:

> When a dialog opens, focus moves to an element inside the dialog. See notes below regarding initial focus placement.

In the subsequent bullet items in the keyboard description, replaced the word "focusable" with "tabbable".

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -511,17 +511,19 @@
       </p>
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
+        <p>In the following description, the term <q>tabbable element</q> refers to any element with a <code>tabindex</code> value of zero or greater. Note that values greater than 0 are strongly discouraged.</p>
         <ul>
+          <li>When a dialog opens, focus moves to an element inside the dialog. See notes below regarding initial focus placement.</li>
           <li><kbd>Tab</kbd>:
             <ul>
-              <li>Moves focus to the next focusable element inside the dialog.</li>
-              <li>If focus is on the last element, moves focus to the first focusable element inside the dialog. </li>
+              <li>Moves focus to the next tabbable element inside the dialog.</li>
+              <li>If focus is on the last tabbable element inside the dialog, moves focus to the first tabbable element inside the dialog. </li>
             </ul>
           </li>
           <li><kbd>Shift + Tab</kbd>:
             <ul>
-              <li>Moves focus to the previous focusable element inside the dialog.</li>
-              <li>If focus is on the first element, moves focus to the last focusable element inside the dialog.</li>
+              <li>Moves focus to the previous tabbable element inside the dialog.</li>
+              <li>If focus is on the first tabbable element inside the dialog, moves focus to the last tabbable element inside the dialog.</li>
             </ul>
           </li>
         <li><kbd>Escape</kbd>: Closes the dialog.</li>
