Treeview Examples: Revise Tree Role Info and Fix Broken JS Source Link
For issues #223, #224, #225, and #226, made the following changes.

1. In the `tree` row of the states and properties table, change "an tree" to "a tree".
2. In the `tree` row of the states and properties table, removed unnecessary bullet that defines the tree role.
3. In the `tree` row of the states and properties table, reworded the bullet about the roving tabindex focus management.
4. In the source code section of the navigation treeview examples, removed link to no longer existent treeitemClick.js file.

--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -549,12 +549,11 @@
               <td><code>ul</code></td>
               <td>
                 <ul>
-                  <li>Identifies the <code>ul</code> element as an <code>tree</code> widget.</li>
-                  <li>A <code>tree</code> is a container widget for focusable, interactive <code>treeitem</code> elements.</li>
+                  <li>Identifies the <code>ul</code> element as a <code>tree</code> widget.</li>
                   <li>
-                    The <code>tree</code> is not made focusable with a <code>tabindex</code> value because a
-                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>
-                    is used to control which descendant <code>treeitem</code> receives focus.
+                    Because focus movement in the tree is managed with a 
+                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>, 
+                    the <code>tree</code> container does not need a <code>tabindex</code> attribute.
                   </li>
                 </ul>
               </td>
