--- a/examples/treeview/treeview-2/treeview-2a.html
+++ b/examples/treeview/treeview-2/treeview-2a.html
@@ -467,11 +467,10 @@
               <td>
                 <ul>
                   <li>Identifies the <code>ul</code> element as a <code>tree</code> widget.</li>
-                  <li>A <code>tree</code> is a container widget for focusable, interactive <code>treeitem</code> elements.</li>
                   <li>
-                    The <code>tree</code> is not made focusable with a <code>tabindex</code> value because a
-                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>
-                    is used to control which descendant <code>treeitem</code> receives focus.
+                    Because focus movement in the tree is managed with a 
+                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>, 
+                    the <code>tree</code> container does not need a <code>tabindex</code> attribute.
                   </li>
                 </ul>
               </td>
@@ -608,10 +607,6 @@
           <li>
             Javascript:
             <a href="js/treeitemLinks.js" type="text/javascript">treeitemLinks.js</a>
-          </li>
-          <li>
-            Javascript:
-            <a href="js/treeitemClick.js" type="text/javascript">treeitemClick.js</a>
           </li>
         </ul>
       </section>
