--- a/examples/menu-button/menu-button-links.html
+++ b/examples/menu-button/menu-button-links.html
@@ -138,7 +138,7 @@
           </thead>
           <tbody>
             <tr>
-              <th><kbd>Space</kbd><br><kbd>Enter</kbd></th>
+              <th><kbd>Enter</kbd></th>
               <td>
                 <ul>
                                     <li>Closes the menu.</li>
