Menu Button Pattern: Editorial Revision to Keyboard Subsection For Issue #326
Per feedback from @annabbott in issue #326, revised documentation for enter and space to fix subject/verb agreement.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1512,7 +1512,8 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
         <ul>
           <li>With focus on the button:
             <ul>
-              <li><kbd>Space</kbd> and <kbd>Enter</kbd>: open the menu and place focus on the first menu item. </li>
+              <li><kbd>Enter</kbd>: opens the menu and places focus on the first menu item. </li>
+              <li><kbd>Space</kbd>: Opens the menu and places focus on the first menu item. </li>
               <li>(Optional) <kbd>Down Arrow</kbd>: opens the menu and moves focus to the first menu item. </li>
             </ul>
           </li>
