--- a/aria-practices.html
+++ b/aria-practices.html
@@ -580,7 +580,7 @@
             Because marking a dialog modal by setting 
             <a href="#aria-modal" class="property-reference">aria-modal</a>
             to <code>true</code> can prevent users of some assistive technologies from perceiving content outside the dialog,
-            users of those technologies will experience severe negative ramifications if a dialog is marked modal but is not modal for other users.
+            users of those technologies will experience severe negative ramifications if a dialog is marked modal but does not behave as a modal for other users.
             So, mark a dialog modal <strong>only when:</strong>
             <ol>
               <li>Application code prevents all users from interacting in any way with content outside of it.</li>
