--- a/examples/menu-button/menu-button-links.html
+++ b/examples/menu-button/menu-button-links.html
@@ -138,7 +138,7 @@
           </thead>
           <tbody>
             <tr>
-              <th><kbd>Space</kbd><br><kbd>Enter</kbd></th>
+              <th><kbd>Enter</kbd></th>
               <td>
                 <ul>
                                     <li>Closes the menu.</li>
@@ -186,7 +186,7 @@
               <th><kbd>A-Z</kbd><br><kbd>a-z</kbd></th>
               <td>
                 <ul>
-                  <li>Moves focus to the next menu item with a lable that starts with the typed character if such an menu item exists.</li>
+                  <li>Moves focus to the next menu item with a label that starts with the typed character if such an menu item exists.</li>
                   <li>Otherwise, focus does not move.</li>
                 </ul>
               </td>
@@ -372,7 +372,7 @@
       </section>
     </main>
     <nav>
-      <a href="../../../#menubutton">Menu Button Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+      <a href="../../#menubutton">Menu Button Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
     </nav>
   </body>
 </html>
