Modal Dialog Pattern: Modify Warning  About Use of aria-modal
Per feedback from @annabbott on issue #325 in the May 1, 2017 task force meeting, changed:

> So, mark a dialog modal <strong>only when:</strong>

To add the word both:

> So, mark a dialog modal <strong>only when both:</strong>

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -581,7 +581,7 @@
             <a href="#aria-modal" class="property-reference">aria-modal</a>
             to <code>true</code> can prevent users of some assistive technologies from perceiving content outside the dialog,
             users of those technologies will experience severe negative ramifications if a dialog is marked modal but does not behave as a modal for other users.
-            So, mark a dialog modal <strong>only when:</strong>
+            So, mark a dialog modal <strong>only when both:</strong>
             <ol>
               <li>Application code prevents all users from interacting in any way with content outside of it.</li>
               <li>Visual styling obscures the content outside of it.</li>
