fixed typo for label

--- a/examples/menu-button/menu-button-actions-active-descendant.html
+++ b/examples/menu-button/menu-button-actions-active-descendant.html
@@ -161,7 +161,7 @@
               <th><kbd>A-Z</kbd><br><kbd>a-z</kbd></th>
               <td>
                 <ul>
-                  <li>Moves focus to the next menu item with a lable that starts with the typed character if such an menu item exists.</li>
+                  <li>Moves focus to the next menu item with a label that starts with the typed character if such an menu item exists.</li>
                   <li>Otherwise, focus does not move.</li>
                 </ul>
               </td>
