Button Example: Fix Broken Links to Menu Button Examples
The button example page includes the menu button examples in its list of similar examples.
In pull #375, the directory structure and file names for menubutton examples were changed, which broke those links.
This commit updates the list of similar examples to include all 3 menu buttons with appropriate descriptions and correct href attributes.

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -23,8 +23,9 @@
     </p>
     <p>Similar examples include:</p>
     <ul>
-      <li><a href="../menu-button/menu-button-1/menu-button-1.html">Action Menu Button</a>: Demonstrates using <code>aria-haspopup</code> to create a menu button for a button that opens a menu of actions.</li>
-      <li><a href="../menu-button/menu-button-2/menu-button-2.html">Navigation Menu Button</a>: Demonstrates using <code>aria-haspopup</code> to create a menu button for a button that opens a menu of items that act as links.</li>
+      <li><a href="../menu-button/menu-button-links.html">Navigation Menu Button</a>: A button that opens a menu of items that behave as links.</li>
+      <li><a href="../menu-button/menu-button-actions.html">Action Menu Button Example Using element.focus()</a>: A button that opens a menu of actions or commands where focus in the menu is managed using <code>element.focus()</code>.</li>
+      <li><a href="../menu-button/menu-button-actions-active-descendant.html">Action Menu Button Example Using aria-activedescendant</a>: A button that opens a menu of actions or commands where focus in the menu is managed using aria-activedescendant.</li>
     </ul>
   <section>
     <h2 id="ex_label">Example</h2>
